--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -13,6 +16,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "electron-is-dev": "^2.0.0",
+    "framer-motion": "^5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
