--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.8",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.0"
   },
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recharts": "^1.8.23",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^17.0.0",
