--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
     "typescript": "^4.5.5",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.23",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
