--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "framer-motion": "^5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
+    "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.0"
   },
@@ -55,8 +60,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.23",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.6.2",
+    "@types/redux-saga": "^0.10.5",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^17.0.0",
