--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.0"
   },
